--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <LinearLayout
+        android:id="@+id/displayLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="0.5"
         android:orientation="vertical"
         android:background="#ffffff"
         android:padding="16dp"
         android:layout_marginBottom="16dp"
         android:elevation="4dp">
 
-<!--        history display-->
-        <TextView
-            android:id="@+id/textViewHistory"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:gravity="end|bottom"
-            android:padding="10dp"
-         />
-
-
-
         <!--        main display-->
         <TextView
             android:id="@+id/textViewDisplay"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#065535"
+            android:gravity="end|center_vertical"
+            android:padding="10dp"
+            android:text="0"
+            android:textColor="#f5f5f5"
+            android:textSize="32sp" />
+
+        <!--        history display-->
+        <TextView
+            android:id="@+id/textViewHistory"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="TextView"
-
-
-            />
-
-
+            android:gravity="end|bottom"
+            android:padding="10dp"
+            android:text="History" />
 
     </LinearLayout>
 
+<!--    Button Area-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/buttonGrid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <!-- Row 1 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/buttonCE"
+                style="@style/CalculatorButton.Function"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="CE" />
+
+            <Button
+                android:id="@+id/buttonC"
+                style="@style/CalculatorButton.Function"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="C" />
+
+            <Button
+                android:id="@+id/buttonBackspace"
+                style="@style/CalculatorButton.Function"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="←" />
+
+            <Button
+                android:id="@+id/ButtonDivide"
+                style="@style/CalculatorButton.Operator"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="/" />
+
+        </LinearLayout>
+
+        <!-- Row 2 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/Button7"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="7" />
+
+            <Button
+                android:id="@+id/Button8"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="8" />
+
+            <Button
+                android:id="@+id/Button9"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="9" />
+
+            <Button
+                android:id="@+id/ButtonMultiply"
+                style="@style/CalculatorButton.Operator"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="*" />
+
+        </LinearLayout>
+
+        <!-- Row 3 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/Button4"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="4" />
+
+            <Button
+                android:id="@+id/Button5"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="5" />
+
+            <Button
+                android:id="@+id/Button6"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="6" />
+
+            <Button
+                android:id="@+id/ButtonMinus"
+                style="@style/CalculatorButton.Operator"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="-" />
+
+        </LinearLayout>
+
+        <!-- Row 4 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/Button1"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="1" />
+
+            <Button
+                android:id="@+id/Button2"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="2" />
+
+            <Button
+                android:id="@+id/Button3"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="3" />
+
+            <Button
+                android:id="@+id/ButtonPlus"
+                style="@style/CalculatorButton.Operator"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="+" />
+
+        </LinearLayout>
+
+        <!-- Row 5 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/Button0"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:text="0" />
+
+            <Button
+                android:id="@+id/ButtonDecimal"
+                style="@style/CalculatorButton.Number"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="." />
+
+            <Button
+                android:id="@+id/ButtonEquals"
+                style="@style/CalculatorButton.Equals"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="=" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
